look ma im committing identity theft

--- a/Pipfile.2
+++ b/Pipfile.2
@@ -4,8 +4,16 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+opencv-python = "*"
+matplotlib = "*"
+numpy = "*"
+setuptools = "*"
+flask = "*"
+flask-restful = "*"
+requests = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.9"
+
